--- a/static/mpics/prob.html
+++ b/static/mpics/prob.html
@@ -10,5 +10,18 @@
 
 <hr>
  Music by <a href="https://sleepfacingwest.newgrounds.com/">sleepFacingWest</a>
+
+
+Давным давно, в самом недалеком будущем люди земли научились управлять временем <br>
+и даже посылать в прошлое живых существ... но выживали при этом только крабы, бабочки и водоросли.<br>
+Подчинясь мировому хайпу, ученые решили <a href="https://globalgamejam.org/theme">ОТРЕМОНТИРОВАТЬ</a> нынешнюю экологию, разрабатывая генно-модифированных <br>
+существ, и используя их для влияния на экологию за миллионы нет. Несмотря на то, что ресурсов для создания мутаций <br>
+слишком мало, очкарики, фанатично приверженные <a href="https://worldecologicalforum.com/">великой идее</a>, <br>
+раз за разом пытаются создать идеальных существ, способных отремонтировать землю...
+
+<h2>Поздравляю!!!<br>Вы удачно тераформировали землю. А почему бы не попробовать сделать это с другими планетами?<br>
+Попробовать их сделать пригодными для жизни человека... попробуй! В твоих руках ключ от тысячи дверей. Вперед, к новым достижениям!!!<br>
+Востанови новые миры!!!<br> Дай человечеству шанс!!!</h2>
+
 </body>
 </html>
